# StoryTime

./: CMakeLists.txt  README.md  TODO
doc/: StoryWritersGuide.md
include/: ChoiceBox.hpp  GameSaver.hpp  GameSlice.hpp  GlobalSettings.hpp  IO.hpp  MainGame.hpp  MenuScreen.hpp  OpeningScreen.hpp  SelectStory.hpp  SliceManager.hpp  StoryVerifier.hpp  TextHandler.hpp  TextParser.hpp  TextSegment.hpp  Utils.hpp
saves/: testSave.save
src/: Box.cpp  Box.hpp  CMakeLists.txt  ChoiceBox.cpp  ChoiceBox.hpp  GameSaver.cpp  GameSaver.hpp  GameSlice.cpp  GameSlice.hpp  GlobalSettings.cpp  GlobalSettings.hpp  IO.cpp  ImageBox.cpp  ImageBox.hpp  LoadStoryScreen.cpp  LoadStoryScreen.hpp  MainGame.cpp  MainGame.hpp  MenuScreen.cpp  MenuScreen.hpp  OpeningScreen.cpp  OpeningScreen.hpp  SelectStory.cpp  SelectStory.hpp  StoryHandler.cpp  StoryHandler.hpp  StoryResources.cpp  StoryResources.hpp  StoryTime.cpp  StoryVerifier.cpp  StoryVerifier.hpp  TextBox.cpp  TextBox.hpp  TextHandler.cpp  TextHandler.hpp  TextParser.cpp  TextParser.hpp  TextSegment.cpp  TextSegment.hpp  Utils.hpp  (+2 more)
stories/: howOriginal.story  test.story
stories/test/: test.story
